stderr
JudgeMan.java:99: error: : or -> expected
                default
                       ^
1 error
